--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis + "-" + yAxis;
-            self.location="l2Files/";
+            self.location="Level 2/";
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -87,7 +87,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
-            self.location="l2Files/";
+            self.location="Level 2/";
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -113,7 +113,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
-            self.location="l2Files/";
+            self.location="Level 2/";
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -139,7 +139,7 @@ document.onkeydown = function(event) {
           function LoadLv2() 
           {
             document.cookie = xAxis;
-            self.location="l2Files/";
+            self.location="Level 2/";
           }
           setTimeout(LoadLv2, 1500);
         }
