--- a/L2/index.html
+++ b/L2/index.html
@@ -43,7 +43,10 @@
                   case 37:
                     xAxis -= moveSpeed;
                     div.style.left = xAxis + 'px';
-                    DOMelementOverlapCheck(nmeDiv, div);
+                    if(DOMelementOverlapCheck(nmeDiv, div) === true)
+                    {
+                      self.location("Battle/?id=3tv8fh")
+                    }
                     break;
                   case 38:
                     yAxis -= moveSpeed;
