--- a/L2/index.html
+++ b/L2/index.html
@@ -45,7 +45,7 @@
                     div.style.left = xAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
-                      self.location="Battle/?id=3tv8fh";
+                      self.location="https://minikielbym.github.io/WebGame/Battle/";
                     }
                     break;
                   case 38:
@@ -53,7 +53,7 @@
                     div.style.top = yAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
-                      self.location="Battle/?id=3tv8fh";
+                      self.location="https://minikielbym.github.io/WebGame/Battle/";
                     }
                     break;
                   case 39:
@@ -61,7 +61,7 @@
                     div.style.left = xAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
-                      self.location="Battle/?id=3tv8fh";
+                      self.location="https://minikielbym.github.io/WebGame/Battle/";
                     }
                     break;
                   case 40: 
@@ -69,7 +69,7 @@
                     div.style.top = yAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
-                      self.location="Battle/?id=3tv8fh";
+                      self.location="https://minikielbym.github.io/WebGame/Battle/";
                     }
                    break;
                 }
