messsing around with more css functionality

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -25,6 +25,6 @@
   </script>
 </head>
 <body onload="setUp()">
-  <div><img id="char"/></div>
-  <div><img id="nme"/></div>
+  <div id="charDiv"><img id="char"/></div>
+  <div id="nmeDiv"><img id="nme"/></div>
 </body>
