--- a/Battle/index.html
+++ b/Battle/index.html
@@ -19,8 +19,10 @@
       const fid = readId();
       const nmeID = fid + "/" + fid + "-nme.png";
       const charID = fid + "/" + fid + "-char.png";
+      const bgID = fid + "/" + fid + "-BG.png";
       nme.src = nmeID;
       char.src = charID;
+      document.body.style.backgroundImage = "url(fid)";
     }
   </script>
 </head>
