debugged background dynamics

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -20,9 +20,10 @@
       const nmeID = fid + "/" + fid + "-nme.png";
       const charID = fid + "/" + fid + "-char.png";
       const bgID = fid + "/" + fid + "-BG.png";
+      
       nme.src = nmeID;
       char.src = charID;
-      document.body.style.backgroundImage = "url(fid)";
+      document.body.style.backgroundImage = "url(" + bgID;
     }
   </script>
 </head>
