--- a/Battle/index.html
+++ b/Battle/index.html
@@ -20,7 +20,6 @@
       const nmeID = fid + "/" + fid + "-nme.png";
       const charID = fid + "/" + fid + "-char.png";
       const bgID = fid + "/" + fid + "-BG.png";
-      
       nme.src = nmeID;
       char.src = charID;
       document.body.style.backgroundImage = "url(" + bgID + ")";
@@ -29,6 +28,6 @@
 </head>
 <body onload="setUp()">
   <div id="charDiv"><img id="char"/></div>
-  <div id="life" class="char"><img id="lifeBar" class="char" src="life/3hp.png"></div>
+  <div id="life" class="char"><img id="lifeBar" class="char" src="life/3hp-trimmy.jpg"></div>
   <div id="nmeDiv"><img id="nme"/></div>
 </body>
