--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = xAxis + "-" + yAxis;
+            document.cookie = xAxis;
             self.location="L2";
+            localStorage.setItem("test", "helloWorld")
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -88,6 +89,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
+            localStorage.setItem("test", "helloWorld")
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -114,6 +116,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
+            localStorage.setItem("test", "helloWorld")
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -140,6 +143,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
+            localStorage.setItem("test", "helloWorld")
           }
           setTimeout(LoadLv2, 1500);
         }
