--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
-            localStorage.setItem("test", "helloWorld")
+            localStorage.setItem("test", "helloWorld");
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -89,7 +89,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
-            localStorage.setItem("test", "helloWorld")
+            localStorage.setItem("test", "helloWorld");
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -116,7 +116,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
-            localStorage.setItem("test", "helloWorld")
+            localStorage.setItem("test", "helloWorld");
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -143,7 +143,7 @@ document.onkeydown = function(event) {
           {
             document.cookie = xAxis;
             self.location="L2";
-            localStorage.setItem("test", "helloWorld")
+            localStorage.setItem("test", "helloWorld");
           }
           setTimeout(LoadLv2, 1500);
         }
