--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@ document.onkeydown = function(event) {
           div.style.visibility= 'hidden';
           function LoadLv2() 
           {
-            document.cookie = xAxis;
             self.location="L2";
-            localStorage.setItem("test", "helloWorld");
+            localStorage.setItem("xpos", xAxis);
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -86,10 +85,9 @@ document.onkeydown = function(event) {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
           function LoadLv2() 
-          {
-            document.cookie = xAxis;
+          { 
             self.location="L2";
-            localStorage.setItem("test", "helloWorld");
+            localStorage.setItem("xpos", xAxis);
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -113,10 +111,9 @@ document.onkeydown = function(event) {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
           function LoadLv2() 
-          {
-            document.cookie = xAxis;
+          { 
             self.location="L2";
-            localStorage.setItem("test", "helloWorld");
+            localStorage.setItem("xpos", xAxis);
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -140,10 +137,9 @@ document.onkeydown = function(event) {
           document.body.style.backgroundImage = "url('blank.png')";
           div.style.visibility= 'hidden';
           function LoadLv2() 
-          {
-            document.cookie = xAxis;
+          { 
             self.location="L2";
-            localStorage.setItem("test", "helloWorld");
+            localStorage.setItem("xpos", xAxis);
           }
           setTimeout(LoadLv2, 1500);
         }
