--- a/L2/index.html
+++ b/L2/index.html
@@ -14,13 +14,13 @@
           }
         }
         function setXbycookie() {
-          document.getElementById("img").style.left = QuickMath("x");
+          document.getElementById("img1").style.left = QuickMath("x");
         }
       </script>
     </head>
     <body class = "l2" onload="setXbycookie();">
+      <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <div id = "nme1"><img src="3tv8fh-nme.png" id="nme"/></div>  
-        <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <script type="text/javascript">
             (function() {
               function DOMelementOverlapCheck(div1, div2) {
