--- a/L2/index.html
+++ b/L2/index.html
@@ -39,6 +39,8 @@
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
                       self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      localStorage.setItem("charHp", "3");
+                      localStorage.setItem("nmeHp", "3");
                     }
                     break;
                   case 38:
@@ -47,6 +49,8 @@
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
                       self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      localStorage.setItem("charHp", "3");
+                      localStorage.setItem("nmeHp", "3");
                     }
                     break;
                   case 39:
@@ -55,6 +59,8 @@
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
                       self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      localStorage.setItem("charHp", "3");
+                      localStorage.setItem("nmeHp", "3");
                     }
                     break;
                   case 40: 
@@ -63,6 +69,8 @@
                     if(DOMelementOverlapCheck(nmeDiv, div) === true)
                     {
                       self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      localStorage.setItem("charHp", "3");
+                      localStorage.setItem("nmeHp", "3");
                     }
                    break;
                 }
