--- a/Battle/index.html
+++ b/Battle/index.html
@@ -22,8 +22,8 @@
       const nmeID = fid + "/" + fid + "-nme.png";
       const charID = fid + "/" + fid + "-char.png";
       const bgID = fid + "/" + fid + "-BG.png";
-      const charHpID = "life/" + charHp + "hp-trimmy.png"
-      nme.src = nmeID;
+      const charHpID = charHp + "hp-trimmy.png"
+      nme.src = nmeID
       char.src = charID;
       document.body.style.backgroundImage = "url(" + bgID + ")";
       document.getElementById("lifeBarChar").src = charHpID;
