--- a/Battle/index.html
+++ b/Battle/index.html
@@ -32,6 +32,6 @@
 </head>
 <body onload="setUp()">
   <div id="charDiv"><img id="char"/></div>
-  <div id="life" class="char"><img id="lifeBarChar" class="char" src="life/3hp-trimmy.jpg"></div>
+  <div id="life" class="char"><img id="lifeBarChar" class="char"></div>
   <div id="nmeDiv"><img id="nme"/></div>
 </body>
