--- a/Battle/index.html
+++ b/Battle/index.html
@@ -14,7 +14,7 @@
     }
     function setUp()
     {
-      const charHp = parseFloat(localStorage.getItem("charHp"));
+      const charHp = localStorage.getItem("charHp");
       const nmeHp = parseFloat(localStorage.getItem("nmeHp"));
       const nme = document.getElementById("nme");
       const char = document.getElementById("char");
