--- a/Battle/index.html
+++ b/Battle/index.html
@@ -22,7 +22,7 @@
       const nmeID = fid + "/" + fid + "-nme.png";
       const charID = fid + "/" + fid + "-char.png";
       const bgID = fid + "/" + fid + "-BG.png";
-      const charHpID = charHp + "hp-trimmy.png"
+      const charHpID = charHp + "hp-trimmy.jpg"
       nme.src = nmeID
       char.src = charID;
       document.body.style.backgroundImage = "url(" + bgID + ")";
