--- a/Battle/index.html
+++ b/Battle/index.html
@@ -34,5 +34,5 @@
   <div id="charDiv"><img id="char"/></div>
   <div id="life" class="char"><img id="lifeBarChar" class="char"></div>
   <div id="nmeDiv"><img id="nme"/></div>
-  <div id="button"><div id="fight"><button id="FightButton" src="buttons/Fight-trimmy.png"></button></div></div>
+  <div id="button"><div id="fight"><button id="FightButton"><img src="buttons/Fight-trimmy.png"/></button></div></div>
 </body>
