more int parsing

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -28,6 +28,11 @@
       document.body.style.backgroundImage = "url(" + bgID + ")";
       document.getElementById("lifeBarChar").src = charHpID;
     }
+    function RunButton()
+    {
+      localStorage.setItem("xpos", "730");
+      localStorage.setItem("ypos", "400");
+    }
   </script>
 </head>
 <body onload="setUp()">
