--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ document.onkeydown = function(event) {
           {
             self.location="L2";
             localStorage.setItem("xpos", xAxis);
+            localStorage.setItem("ypos", "350");
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -88,6 +89,7 @@ document.onkeydown = function(event) {
           { 
             self.location="L2";
             localStorage.setItem("xpos", xAxis);
+            localStorage.setItem("ypos", "350");
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -114,6 +116,7 @@ document.onkeydown = function(event) {
           { 
             self.location="L2";
             localStorage.setItem("xpos", xAxis);
+            localStorage.setItem("ypos", "350");
           }
           setTimeout(LoadLv2, 1500);
         }
@@ -140,6 +143,7 @@ document.onkeydown = function(event) {
           { 
             self.location="L2";
             localStorage.setItem("xpos", xAxis);
+            localStorage.setItem("ypos", "350");
           }
           setTimeout(LoadLv2, 1500);
         }
