debugged html css loading

--- a/L2/index.html
+++ b/L2/index.html
@@ -13,7 +13,7 @@
         }
       </script>
     </head>
-    <body class = "l2" onload="setX();">
+    <body class = "l2" onload="setXY();">
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
         <div id = "nme1"><img src="3tv8fh-nme.png" id="nme"/></div>
         <script type="text/javascript">
