--- a/Battle/index.html
+++ b/Battle/index.html
@@ -32,6 +32,7 @@
     {
       localStorage.setItem("xpos", "730");
       localStorage.setItem("ypos", "400");
+      location.self("https://minikielbym.github.io/WebGame/L2/");
     }
   </script>
 </head>
