--- a/Battle/index.html
+++ b/Battle/index.html
@@ -32,7 +32,7 @@
     {
       localStorage.setItem("xpos", "730");
       localStorage.setItem("ypos", "400");
-      location.self(document.referrer);
+      self.location=document.referrer;
     }
   </script>
 </head>
