--- a/Battle/index.html
+++ b/Battle/index.html
@@ -6,6 +6,9 @@
   <title>RPG Webgame Testing</title>
   <link href="fightHTML.css" rel="stylesheet" type="text/css">
   <script>
+    function getRandomArbitrary(min, max) {
+      return Math.random() * (max - min) + min;
+    }
     function readId() {
       var Query = window.location.search;
       let QueryString = new URLSearchParams(Query);
@@ -33,6 +36,10 @@
       localStorage.setItem("xpos", "730");
       localStorage.setItem("ypos", "400");
       self.location=document.referrer;
+    }
+    function FightButton()
+    {
+      getRandomArbitrary(1, 3)
     }
   </script>
 </head>
