--- a/Battle/index.html
+++ b/Battle/index.html
@@ -47,6 +47,16 @@
   <div id="charDiv"><img id="char"/></div>
   <div id="life" class="char"><img id="lifeBarChar" class="char"></div>
   <div id="nmeDiv"><img id="nme"/></div>
-  <div id="button"><div id="fight"><button id="FightButton" onclick="FightButton()"><img src="buttons/Fight-trimmy.png"/></button>
-  </div><div id="run"><button id="RunButton" onclick="RunButton();"><img src="buttons/Run-trimmy.png"/></button></div></div>
+  <div id="button">
+    <div id="fight">
+      <button id="FightButton" onclick="FightButton()">
+        <img src="buttons/Fight-trimmy.png"/>
+      </button>
+    </div>
+    <div id="run">
+      <button id="RunButton" onclick="RunButton();">
+        <img src="buttons/Run-trimmy.png"/>
+      </button>
+    </div>
+  </div>
 </body>
