--- a/Battle/index.html
+++ b/Battle/index.html
@@ -39,7 +39,7 @@
     }
     function FightButton()
     {
-      console.log(getRandomArbitrary(1, 3));
+      console.log(math.floor(getRandomArbitrary(1, 11)));
     }
   </script>
 </head>
