debugged math.floor?

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -42,7 +42,7 @@
     function FightButton()
     {
       var roll = getRandomArbitrary(1, 11);
-      var chanceRoll = math.floor(roll);
+      var chanceRoll = Math.floor(roll);
       if (chanceRoll === 1)
       {
 
