debugging logging added

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -43,6 +43,7 @@
     {
       var roll = getRandomArbitrary(1, 11);
       var chanceRoll = Math.floor(roll);
+      console.log(chanceRoll);
       if (chanceRoll === 1)
       {
 
