--- a/Battle/index.html
+++ b/Battle/index.html
@@ -54,6 +54,10 @@
       {
         nmeHp--;
         console.log(nmeHp);
+        if(nmeHp === '0')
+        {
+          RunButton();
+        }
       }
     }
   </script>
