--- a/Battle/index.html
+++ b/Battle/index.html
@@ -54,7 +54,7 @@
       {
         nmeHp--;
         console.log(nmeHp);
-        if(nmeHp === '0')
+        if(nmeHp === 0)
         {
           RunButton();
         }
