--- a/Battle/index.html
+++ b/Battle/index.html
@@ -43,12 +43,16 @@
     }
     function FightButton()
     {
+      const fightButton = document.getElementById("FightButton");
+      fightButton.disabled = true;
       var roll = getRandomArbitrary(1, 11);
+      var roll2 = getRandomArbitrary(1, 11);
       var chanceRoll = Math.floor(roll);
+      var chanceRoll2 = Math.floor(roll2);
       console.log(chanceRoll);
       if (chanceRoll === 1)
       {
-        
+        console.log("you missed")
       }
       else
       {
@@ -58,6 +62,15 @@
         {
           RunButton();
         }
+      }
+      if(chanceRoll2 === 1)
+      {
+        console.log("monster missed you")
+      }
+      else 
+      {
+        charHp--;
+        document.getElementById("lifeBarChar").src = charHp + "hp-trimmy.jpg"
       }
     }
   </script>
@@ -77,5 +90,8 @@
         <img src="buttons/Run-trimmy.png"/>
       </button>
     </div>
+  </div>
+  <div>
+    <img id="missed"/>
   </div>
 </body>
