debugging log added

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -70,6 +70,7 @@
       else 
       {
         charHp--;
+        console.log(charHp);
         document.getElementById("lifeBarChar").src = charHp + "hp-trimmy.jpg"
       }
     }
