fixed double press

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -73,6 +73,7 @@
         console.log(charHp);
         document.getElementById("lifeBarChar").src = charHp + "hp-trimmy.jpg"
       }
+      fightButton.disabled = false;
     }
   </script>
 </head>
