made charhp run away

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -72,6 +72,10 @@
         charHp--;
         console.log(charHp);
         document.getElementById("lifeBarChar").src = charHp + "hp-trimmy.jpg"
+        if(charHp === 0)
+        {
+          RunButton();
+        }
       }
       fightButton.disabled = false;
     }
