debugged hp not loading again

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -7,7 +7,7 @@
   <link href="fightHTML.css" rel="stylesheet" type="text/css">
   <script>
     var charHp = localStorage.getItem("charHp");
-    var nmeHp = parseFloat(localStorage.getItem("nmeHp"));  
+    var nmeHp = localStorage.getItem("nmeHp");  
     function getRandomArbitrary(min, max) 
     {
       return Math.random() * (max - min) + min;
