figured out what bug was with nme health.

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -30,7 +30,7 @@
       const charID = fid + "/" + fid + "-char.png";
       const bgID = fid + "/" + fid + "-BG.png";
       const charHpID = charHp + "hp-trimmy.jpg"
-      const nmeHpID = nmeHp + "hp-trimmyjpg"
+      const nmeHpID = nmeHp + "hp-trimmy.jpg"
       nme.src = nmeID
       char.src = charID;
       document.body.style.backgroundImage = "url(" + bgID + ")";
