added nme life bar changing state

--- a/Battle/index.html
+++ b/Battle/index.html
@@ -59,6 +59,7 @@
       else
       {
         nmeHp--;
+        document.getElementById("lifeBarNme").src = nmeHp + "hp-trimmy.jpg"
         console.log(nmeHp);
         if(nmeHp === 0)
         {
