--- a/L2/index.html
+++ b/L2/index.html
@@ -13,7 +13,7 @@
           document.getElementById("img").style.top = parseFloat(y);
           if(localStorage.getItem("3tv8fh") === "true")
           {
-            document.getElementById("nme1").style.display='none';
+            document.getElementById("nme").style.display='none';
           }
         }
       </script>
