--- a/L2/index.html
+++ b/L2/index.html
@@ -11,7 +11,7 @@
         function setUp() {
           document.getElementById("img").style.left = parseFloat(x);
           document.getElementById("img").style.top = parseFloat(y);
-          if(localStorage.getItem("3tv8fh") === "true")
+          if(localStorage.getItem("3tv8fhwin") === "true")
           {
             document.getElementById("nme").style.display='none';
           }
