--- a/L2/index.html
+++ b/L2/index.html
@@ -14,6 +14,7 @@
           if(localStorage.getItem("3tv8fhwin") === "true")
           {
             document.getElementById("nme").remove();
+            localStorage.removeItem('3tv8fhwin');
           }
         }
       </script>
