--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
 (function() {
+localStorage.removeItem('3tv8fhwin');
 //assorted functions code begin
 function DOMelementOverlapCheck(div1, div2) {
   const domRect1 = div1.getBoundingClientRect();
